add letter-spacing vars

--- a/client/src/components/app/app.styles.scss
+++ b/client/src/components/app/app.styles.scss
@@ -51,6 +51,9 @@
   --line-height-text-m: 1.4em;
   --line-height-text-l: 2em;
 
+  --letter-spacing-s: 0.06px;
+  --letter-spacing-m: 0.25px;
+
   // Размер отступов
   --space-s: 8px;
   --space-m: 20px;
