--- a/client/src/components/header/header.styles.scss
+++ b/client/src/components/header/header.styles.scss
@@ -30,12 +30,12 @@
   align-items: flex-end;
 }
 
-.Header-Title_veiw_base {
+.Header-Title_view_base {
   color: var(--color-font-base);
   line-height: 30px;
 }
 
-.Header-Title_veiw_secondary {
+.Header-Title_view_secondary {
   color: var(--color-font-secondary);
 }
 
