--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,16 +1,19 @@
 @import "../../vars.scss";
 
-.Header {
-  box-sizing: border-box;
+.Footer {
+  // height: 32px;
+  padding: 8px 100px;
+  background-color: var(--color-bg-dark);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 100px;
+  margin-top: auto;
 }
 
 @media screen and (max-width: $screen-s) {
-  .Header {
+  .Footer {
     padding: 12px 16px;
+    flex-direction: column;
     align-items: flex-start;
   }
 }
