--- a/client/src/components/app/App.scss
+++ b/client/src/components/app/App.scss
@@ -56,12 +56,14 @@
   --letter-spacing-m: 0.25px;
 
   // Размер отступов
-  --space-s: 8px;
+  --space-xxs: 8px;
+  --space-s: 16px;
   --space-m: 20px;
   --space-xxl: 100px;
 
   // Размеры контролов
   --control-height-m: 36px;
+  --control-line-height-m: 32px;
 
   // Размеры скруглений
   --radius-s: 4px;
