--- a/client/src/components/header/Title/Header-Title.scss
+++ b/client/src/components/header/Title/Header-Title.scss
@@ -5,7 +5,7 @@
   font-weight: 500;
   letter-spacing: var(--letter-spacing-m);
   margin: 0;
-  margin-right: var(--space-s);
+  margin-right: var(--space-xxs);
 }
 
 .Header-Title_view_base {
