--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,18 +1,16 @@
 @import "../../vars.scss";
 
 .Footer {
-  // height: 32px;
-  padding: 8px 100px;
+  padding: var(--space-xxs) var(--space-xxl);
   background-color: var(--color-bg-dark);
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: auto;
 }
 
 @media screen and (max-width: $screen-s) {
   .Footer {
-    padding: 12px 16px;
+    padding: 12px var(--space-s);
     flex-direction: column;
     align-items: flex-start;
   }
