--- a/client/src/components/Title/Heading/Title-Heading.scss
+++ b/client/src/components/Title/Heading/Title-Heading.scss
@@ -1,4 +1,4 @@
-.Heading-Title {
+.Title-Heading {
   font-weight: 700;
   font-size: var(--size-text-l);
   line-height: var(--line-height-text-s);
