--- a/client/src/components/Title/Subtitle/Title-Subtitle.scss
+++ b/client/src/components/Title/Subtitle/Title-Subtitle.scss
@@ -1,4 +1,4 @@
-.Heading-Subtitle {
+.Title-Subtitle {
   color: var(--color-font-secondary);
   font-size: var(--size-text-m);
   line-height: var(--line-height-text-m);
