--- a/client/src/components/SectionHeading/Subtitle/SectionHeading-Subtitle.scss
+++ b/client/src/components/SectionHeading/Subtitle/SectionHeading-Subtitle.scss
@@ -1,4 +1,4 @@
-.Title-Subtitle {
+.SectionHeading-Subtitle {
   color: var(--color-font-secondary);
   font-size: var(--size-text-m);
   line-height: var(--line-height-text-m);
