--- a/client/src/components/SectionHeading/Title/SectionHeading-Title.scss
+++ b/client/src/components/SectionHeading/Title/SectionHeading-Title.scss
@@ -1,4 +1,4 @@
-.Title-Heading {
+.SectionHeading-Title {
   font-weight: 700;
   font-size: var(--size-text-l);
   line-height: var(--line-height-text-s);
