--- a/client/src/components/header/BuildTitle/Header-BuildTitle.scss
+++ b/client/src/components/header/BuildTitle/Header-BuildTitle.scss
@@ -1,33 +1,19 @@
 @import "../../../vars.scss";
 
-.Header-Title {
+.Header-BuildTitle {
   font-size: var(--size-text-3xl);
   font-weight: 500;
   letter-spacing: var(--letter-spacing-m);
   margin: 0;
   margin-right: var(--space-xxs);
-}
 
-.Header-Title_view_base {
   color: var(--color-font-base);
   line-height: 30px;
 }
 
-.Header-Title_view_secondary {
-  color: var(--color-font-secondary);
-}
-
 @media screen and (max-width: $screen-s) {
-  .Header-Title {
+  .Header-Logo {
     font-size: var(--size-text-2xl);
-  }
-
-  .Header-Title_veiw_base {
-    line-height: 22px;
-  }
-
-  .Header-Title_veiw_secondary {
-    align-self: center;
     line-height: 22px;
   }
 }
