--- a/client/src/components/Section/Section.scss
+++ b/client/src/components/Section/Section.scss
@@ -2,6 +2,7 @@
 
 .Section {
   padding: var(--space-xxs) var(--space-xxl) var(--space-m) var(--space-xxl);
+  position: relative;
 }
 
 @media screen and (max-width: $screen-s) {
