hinish history page

--- a/client/src/components/Status/Number/Status-Number.scss
+++ b/client/src/components/Status/Number/Status-Number.scss
@@ -21,7 +21,7 @@
 }
 
 @media screen and (max-width: $screen-s) {
-  .status__number {
+  .Status-Number {
     font-size: var(--size-text-xl);
     line-height: 16px;
   }
