--- a/client/src/components/Meta/Text/Meta-Text.scss
+++ b/client/src/components/Meta/Text/Meta-Text.scss
@@ -3,8 +3,14 @@
   font-size: var(--size-text-m);
   line-height: 16px;
   letter-spacing: var(--letter-spacing-s);
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .Meta-Text_secondary {
   opacity: 0.65;
+  white-space: normal;
+  overflow: visible;
 }
