--- a/client/src/components/Card/Time/Card-Time.scss
+++ b/client/src/components/Card/Time/Card-Time.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
+  min-width: 101px;
 }
 
 .Card-Time_position_bottom {
