--- a/client/src/components/app/App.scss
+++ b/client/src/components/app/App.scss
@@ -56,6 +56,7 @@
   --letter-spacing-m: 0.25px;
 
   // Размер отступов
+  --space-xxxs: 4px;
   --space-xxs: 8px;
   --space-xs: 12px;
   --space-s: 16px;
