add post build action

--- a/client/src/components/Status/Number/Status-Number.scss
+++ b/client/src/components/Status/Number/Status-Number.scss
@@ -16,8 +16,8 @@
   color: var(--color-success);
 }
 
-.Status-Number_view_warning {
-  color: var(--color-warning);
+.Status-Number_view_waiting {
+  color: var(--color-waiting);
 }
 
 @media screen and (max-width: $screen-s) {
