--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -26,7 +26,7 @@
   // Симантические цвета
   --color-success: #{$green-500};
   --color-error: #{$red-500};
-  --color-warning: #{$orange-500};
+  --color-waiting: #{$orange-500};
 
   // Тени
   --box-shadow: 0px 1px 1px #{rgba($grey-800, 0.3)}, 0px 0px 1px #{rgba($grey-800, 0.3)};
