add loading indicator for post build popup

--- a/client/src/components/App/App.scss
+++ b/client/src/components/App/App.scss
@@ -5,6 +5,7 @@
   // Цвета фона
   --color-bg-base: #{$white-500};
   --color-bg-dark: #{$grey-200};
+  --color-bg-popup: rgba(0, 0, 0, 0.4);
 
   // Цвета фона блоков
   --color-bg-action: #{$yellow-100};
