--- a/client/src/components/PopUp/PopUp.scss
+++ b/client/src/components/PopUp/PopUp.scss
@@ -4,7 +4,10 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--color-bg-popup);
   z-index: 100000;
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
